.metadata/.plugins/org.eclipse.cdt.ui/global-build.log
Info: Nothing to build for estructuras
Info: Nothing to build for estructuras
20:41:17 **** Incremental Build of configuration Debug for project estructuras ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\estructuras.o" "..\\src\\estructuras.c" 
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\utn.o" "..\\src\\utn.c" 
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\producto.o" "..\\src\\producto.c" 
..\src\producto.c: In function 'pedirDatos':
..\src\producto.c:73:9: warning: passing argument 1 of 'myGets' makes pointer from integer without a cast [-Wint-conversion]
  myGets(nombre, sizeof(nombre));
         ^~~~~~
In file included from ..\src\producto.h:14:0,
                 from ..\src\producto.c:2:
..\src\utn.h:18:5: note: expected 'char *' but argument is of type 'char'
 int myGets(char* cadena, int longitud);
     ^~~~~~
..\src\producto.c: In function 'cargarDatos':
..\src\producto.c:91:29: warning: passing argument 2 of 'strcpy' makes pointer from integer without a cast [-Wint-conversion]
   strcpy( pr[indice].nombre,nombre);
                             ^~~~~~
In file included from ..\src\producto.h:13:0,
                 from ..\src\producto.c:2:
c:\mingw\include\string.h:79:40: note: expected 'const char *' but argument is of type 'char'
 _CRTIMP __cdecl __MINGW_NOTHROW  char *strcpy (char *, const char *);
                                        ^~~~~~
..\src\producto.c:91:13: warning: 'indice' may be used uninitialized in this function [-Wmaybe-uninitialized]
   strcpy( pr[indice].nombre,nombre);
             ^
gcc -o estructuras.exe "src\\estructuras.o" "src\\producto.o" "src\\utn.o" 
Info: Nothing to build for funcionesFedeCardozo
20:41:39 **** Incremental Build of configuration Debug for project estructuras ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\producto.o" "..\\src\\producto.c" 
..\src\producto.c: In function 'pedirDatos':
..\src\producto.c:73:9: warning: passing argument 1 of 'myGets' makes pointer from integer without a cast [-Wint-conversion]
  myGets(nombre, sizeof(nombre));
         ^~~~~~
In file included from ..\src\producto.h:14:0,
                 from ..\src\producto.c:2:
..\src\utn.h:18:5: note: expected 'char *' but argument is of type 'char'
 int myGets(char* cadena, int longitud);
     ^~~~~~
..\src\producto.c: In function 'cargarDatos':
..\src\producto.c:90:29: warning: passing argument 2 of 'strcpy' makes pointer from integer without a cast [-Wint-conversion]
   strcpy( pr[indice].nombre,nombre);
                             ^~~~~~
In file included from ..\src\producto.h:13:0,
                 from ..\src\producto.c:2:
c:\mingw\include\string.h:79:40: note: expected 'const char *' but argument is of type 'char'
 _CRTIMP __cdecl __MINGW_NOTHROW  char *strcpy (char *, const char *);
                                        ^~~~~~
gcc -o estructuras.exe "src\\estructuras.o" "src\\producto.o" "src\\utn.o" 
Info: Nothing to build for funcionesFedeCardozo
20:43:21 **** Incremental Build of configuration Debug for project estructuras ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\producto.o" "..\\src\\producto.c" 
gcc -o estructuras.exe "src\\estructuras.o" "src\\producto.o" "src\\utn.o" 
Info: Nothing to build for funcionesFedeCardozo
Info: Nothing to build for estructuras
20:55:40 **** Incremental Build of configuration Debug for project estructuras ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\producto.o" "..\\src\\producto.c" 
..\src\producto.c: In function 'cargarDatos':
..\src\producto.c:86:3: error: too few arguments to function 'pedirDatos'
   pedirDatos();
   ^~~~~~~~~~
..\src\producto.c:67:12: note: declared here
 static int pedirDatos(producto* pr, int indice){
            ^~~~~~~~~~
..\src\producto.c: In function 'imprimirIndice':
..\src\producto.c:109:1: warning: control reaches end of non-void function [-Wreturn-type]
 }
 ^
20:56:26 **** Incremental Build of configuration Debug for project estructuras ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\estructuras.o" "..\\src\\estructuras.c" 
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\producto.o" "..\\src\\producto.c" 
..\src\producto.c: In function 'cargarDatos':
..\src\producto.c:86:3: error: too few arguments to function 'pedirDatos'
   pedirDatos();
   ^~~~~~~~~~
..\src\producto.c:67:12: note: declared here
 static int pedirDatos(producto* pr, int indice){
            ^~~~~~~~~~
20:56:53 **** Incremental Build of configuration Debug for project estructuras ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\producto.o" "..\\src\\producto.c" 
gcc -o estructuras.exe "src\\estructuras.o" "src\\producto.o" "src\\utn.o" 
Info: Nothing to build for funcionesFedeCardozo
Info: Nothing to build for estructuras
20:58:07 **** Incremental Build of configuration Debug for project estructuras ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\estructuras.o" "..\\src\\estructuras.c" 
gcc -o estructuras.exe "src\\estructuras.o" "src\\producto.o" "src\\utn.o" 
Info: Nothing to build for funcionesFedeCardozo
Info: Nothing to build for estructuras
Info: Nothing to build for estructuras
21:05:02 **** Incremental Build of configuration Debug for project estructuras ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\producto.o" "..\\src\\producto.c" 
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\estructuras.o" "..\\src\\estructuras.c" 
..\src\estructuras.c: In function 'main':
..\src\estructuras.c:37:30: warning: passing argument 3 of 'indiceVacio' makes pointer from integer without a cast [-Wint-conversion]
  indiceVacio(productos, tam, indice);
                              ^~~~~~
In file included from ..\src\estructuras.c:20:0:
..\src\producto.h:36:5: note: expected 'int *' but argument is of type 'int'
 int indiceVacio(producto* pr, int tam,int* indice);
     ^~~~~~~~~~~
gcc -o estructuras.exe "src\\estructuras.o" "src\\producto.o" "src\\utn.o" 
Info: Nothing to build for funcionesFedeCardozo
21:05:11 **** Incremental Build of configuration Debug for project estructuras ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\estructuras.o" "..\\src\\estructuras.c" 
gcc -o estructuras.exe "src\\estructuras.o" "src\\producto.o" "src\\utn.o" 
Info: Nothing to build for funcionesFedeCardozo
21:05:22 **** Incremental Build of configuration Debug for project estructuras ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\estructuras.o" "..\\src\\estructuras.c" 
gcc -o estructuras.exe "src\\estructuras.o" "src\\producto.o" "src\\utn.o" 
Info: Nothing to build for funcionesFedeCardozo
Info: Nothing to build for estructuras
21:06:02 **** Incremental Build of configuration Debug for project estructuras ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\producto.o" "..\\src\\producto.c" 
gcc -o estructuras.exe "src\\estructuras.o" "src\\producto.o" "src\\utn.o" 
Info: Nothing to build for funcionesFedeCardozo
Info: Nothing to build for estructuras
